Table booking is completed from admin and customer dashboard.